--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: /psytown@github.com
+baseurl: /wangybehere@github.com
 
 markdown: rdiscount
 pygments: true
@@ -7,13 +7,12 @@ auto: true
 rdiscount:
   extensions: [smart]
 
-name: Sean Zhang
-url: http://psytown.github.com
-description: 生活在未来，做有趣的事
-weibo: psytown 
-github: psytown
-gravatar_url: http://www.gravatar.com/avatar/8b891913917d7dd55a01612d45e341f1.png
+name: Y
+url: http://wangybehere.github.com
+description: IN GOD WE TRUST 
+github: wangybehere
+gravatar_url: http://www.gravatar.com/avatar/e7a95885528074f5c7bd13373ae73d97.png
 
 
-disqus_short_name: psytown
+disqus_short_name: Y
 disqus_show_comment_count:fasle
