--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ rdiscount:
   extensions: [smart]
 
 name: Y
-url: http://wangybehere.github.com
+url: http://wangybehere.github.io
 description: IN GOD WE TRUST 
 github: wangybehere
 gravatar_url: http://www.gravatar.com/avatar/e7a95885528074f5c7bd13373ae73d97.png
